customer part complete
