# src/components/customer/customer.router.js
@@ -1,0 +1,10 @@
+const { createCustomerController, customerLoginController } = require('./customer.controller');
+
+const customerRouter = require('express').Router();
+
+customerRouter.post('/sign-up', createCustomerController);
+customerRouter.post('/login', customerLoginController);
+
+module.exports = {
+    customerRouter
+};
