# src/swagger.json
@@ -19,6 +19,9 @@
         },
         {
             "name": "book"
+        },
+        {
+            "name": "customer"
         }
     ],
     "paths": {
@@ -234,12 +237,121 @@
                     }
                 ]
             }
+        },
+        "/book/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "book"
+                ],
+                "summary": "Endpoint to delete a book",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "400": {
+                        "description": "Error message"
+                    }
+                },
+                "parameters": [
+                    {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Authorization token in form of: Bearer Token",
+                        "required": true
+                    },
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "ID of the book",
+                        "required": true
+                    }
+                ]
+            }
+        },
+        "/customer/sign-up": {
+            "post": {
+                "tags": [
+                    "customer"
+                ],
+                "summary": "Endpoint to regiser a customer",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "400": {
+                        "description": "Error message"
+                    }
+                },
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Request Object",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Customer"
+                        }
+                    }
+                ]
+            }
+        },
+        "/customer/login": {
+            "post": {
+                "tags": [
+                    "customer"
+                ],
+                "summary": "Endpoint to login a customer",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok"
+                    },
+                    "400": {
+                        "description": "Error message"
+                    }
+                },
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "Request Object",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Login"
+                        }
+                    }
+                ]
+            }
         }
     },
     "definitions": {
         "Seller": {
             "properties": {
                 "name": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "Customer": {
+            "properties": {
+                "firstName": {
+                    "type": "string"
+                },
+                "lastName": {
                     "type": "string"
                 },
                 "email": {
